deploy/monitoring/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/name: falzo-monitoring
    app.kubernetes.io/part-of: falzo
