deploy/monitoring/k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falzo-grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: falzo-grafana
    app.kubernetes.io/part-of: falzo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - monitor.falzo.life
      secretName: falzo-monitor-tls
  rules:
    - host: monitor.falzo.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: falzo-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falzo-grafana-http
  namespace: monitoring
  labels:
    app.kubernetes.io/name: falzo-grafana
    app.kubernetes.io/part-of: falzo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-falzo-monitor-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: monitor.falzo.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: falzo-grafana
                port:
                  number: 80
